--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "@components/*": ["src/components/*"],
-      "@hooks/*": ["hooks/*"],
-      "@utility/*": ["utility/*"]
-    }
+    "jsx": "react-jsx"
   },
   "include": ["src"]
 }
